adding log messages + tests (#1835)